--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header class="header">
@@ -243,7 +243,7 @@
         <div class="footer-calc">
           <p class="footer-right-side__title">Подпишитесь на рассылку</p>
           <form class="footer__form">
-            <input class="footer__input" type="text" placeholder="E-mail">
+            <input class="footer__input" type="text" name="email" placeholder="E-mail">
             <button class="footer__btn" type="submit">Подписаться<svg class="footer__btn-svg">
                 <use href="./symbol-defs.svg#icon-icon-send"></use>
               </svg></button>
